# rustybot

./: .gitignore  Cargo.toml  README.md
data/: DHTnodes
src/: bot.rs  commands.rs  db.rs  group.rs  main.rs  trivia.rs  util.rs
