[package]

name = "rustybot"
version = "2.1.0"
authors = [ "Jfreegman <Jfreegman@gmail.com>" ]

[dependencies]
lazy_static = "1.4.0"
time = "0.1"
rand = "0.7"
byteorder = "1"
ctrlc = "3.1.6"

[dependencies.rstox]
git = "https://github.com/JFreegman/rstox.git"
#path = "../rstox"

[profile.dev]
debug = true
